[package]
authors = ["Polka Biome Ltd. <jihoon@tutanota.de>"]
license = "BSD-4-Clause"
homepage = "https://sora.org"
repository = "https://github.com/sora-xor/sora2-network"
edition = "2021"
name = "extended-assets"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
hex-literal = { workspace = true, optional = true }

common = { path = "../../common", default-features = false }
technical = { path = "../technical", default-features = false }

[dev-dependencies]
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-balances = { workspace = true }
currencies = { workspace = true }
tokens = { workspace = true, default-features = false }
hex-literal = { workspace = true}
common = { path = "../../common", features = ['test']}
assets = { path = "../assets" }
permissions = { path = "../permissions" }
technical = { path = "../technical" }

[features]
default = ["std"]

std = [
    "scale-info/std",
    "frame-support/std",
    "frame-benchmarking/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "sp-core/std",
    "sp-std/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "hex-literal",
]

try-runtime = [
    "frame-support/try-runtime",
]

test = []
